--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,138 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Work Sans", sans-serif;
+}
+
+@font-face {
+  font-family: "Didot Medium";
+  src: url(fonts/Didot\ Medium.ttf);
+}
+.second-section img {
+  border-radius: 20px;
+  width: 100%;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 300;
+  color: #6a7385;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.7em;
+}
+
+.small {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.885);
+  font-weight: 500;
+}
+
+.larger {
+  font-size: 20px;
+  line-height: 1.35em;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.1em;
+  font-family: "Didot Medium", serif;
+  text-transform: uppercase;
+}
+
+h2 {
+  padding-bottom: 0.27em;
+  font-size: 62px;
+  font-weight: 400;
+  color: #323861;
+  letter-spacing: -5px;
+  line-height: 1em;
+}
+
+h3 {
+  font-size: 27px;
+  font-weight: 900;
+  line-height: 2em;
+  color: rgb(62, 62, 62);
+  font-family: "Didot Medium";
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 2em;
+  color: white;
+}
+
+h5 {
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: -1.5px;
+  color: #323861;
+  padding-bottom: 0.27em;
+  line-height: 1em;
+}
+
+@media (min-width: 900px) {
+  .container {
+    padding: 2rem;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  .small {
+    font-size: 17.5px;
+    line-height: 1.35em;
+  }
+
+  .larger {
+    font-size: 27px;
+    line-height: 1.35em;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+  }
+
+  h1 {
+    font-size: 120px;
+  }
+
+  h2 {
+    font-size: 62px;
+  }
+
+  h3 {
+    font-size: 27px;
+  }
+}
+button {
+  display: inline-block;
+  background-color: rgb(255, 177, 8);
+  border: none;
+  border-radius: 0.3rem;
+  color: #222647;
+  font-size: 16px;
+  padding: 1rem 2rem;
+  margin: 1.5rem 0;
+  transition: 1s;
+  font-weight: 600;
+  cursor: pointer;
+}
+button i {
+  padding-left: 1em;
+}
+button:hover {
+  background-color: rgb(212, 148, 9);
+}
+
+.secondary-bttn {
+  background-color: rgb(251, 233, 193);
+}
+
 .text-js {
   opacity: 0;
 }
@@ -71,140 +206,6 @@ body > #header {
 }
 #header.active a:hover {
   color: rgb(255, 177, 8);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Work Sans", sans-serif;
-}
-
-@font-face {
-  font-family: "Didot Medium";
-  src: url(fonts/Didot\ Medium.ttf);
-}
-img {
-  height: 100%;
-  border-radius: 20px;
-}
-
-p {
-  font-size: 18px;
-  font-weight: 300;
-  color: #6a7385;
-  font-family: "Roboto", sans-serif;
-  line-height: 1.7em;
-}
-
-.small {
-  font-size: 16px;
-  color: #6a7385;
-  font-weight: 500;
-}
-
-.larger {
-  font-size: 20px;
-  line-height: 1.35em;
-  font-weight: 400;
-  font-family: "Roboto", sans-serif;
-}
-
-h1 {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.1em;
-  font-family: "Didot Medium", serif;
-  text-transform: uppercase;
-}
-
-h2 {
-  padding-bottom: 0.27em;
-  font-size: 62px;
-  font-weight: 400;
-  color: #323861;
-  letter-spacing: -5px;
-  line-height: 1em;
-}
-
-h3 {
-  font-size: 27px;
-  font-weight: 900;
-  line-height: 2em;
-  color: rgb(62, 62, 62);
-  font-family: "Didot Medium";
-}
-
-h4 {
-  font-size: 20px;
-  font-weight: 900;
-  line-height: 2em;
-  color: white;
-}
-
-h5 {
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: -1.5px;
-  color: #323861;
-  padding-bottom: 0.27em;
-  line-height: 1em;
-}
-
-@media (min-width: 900px) {
-  .container {
-    padding: 2rem;
-  }
-
-  p {
-    font-size: 20px;
-  }
-
-  .small {
-    font-size: 0.85rem;
-  }
-
-  .larger {
-    font-size: 27px;
-    line-height: 1.35em;
-    font-weight: 400;
-    font-family: "Roboto", sans-serif;
-  }
-
-  h1 {
-    font-size: 120px;
-  }
-
-  h2 {
-    font-size: 62px;
-  }
-
-  h3 {
-    font-size: 27px;
-  }
-}
-button {
-  display: inline-block;
-  background-color: rgb(255, 177, 8);
-  border: none;
-  border-radius: 0.3rem;
-  color: #222647;
-  font-size: 16px;
-  padding: 1rem 2rem;
-  margin: 1.5rem 0;
-  transition: 1s;
-  font-weight: 600;
-  cursor: pointer;
-}
-button i {
-  padding-left: 1em;
-}
-button:hover {
-  background-color: rgb(212, 148, 9);
-}
-
-.secondary-bttn {
-  background-color: rgb(251, 233, 193);
 }
 
 .animatable {
@@ -496,20 +497,8 @@ body {
   font-size: 45px;
 }
 
-img {
-  width: 100%;
-}
-
 .home-header p {
   color: white;
-}
-.home-header button {
-  background-color: rgb(255, 177, 8);
-  color: #222647;
-}
-.home-header button:hover {
-  background-color: rgb(183, 183, 183);
-  transition: 0.8s;
 }
 
 .hero {
@@ -601,8 +590,26 @@ img {
   background-color: rgba(236, 237, 243, 0.5921568627);
   padding: 7em 0;
 }
+@media (min-width: 768px) {
+  .slider-container .container-right {
+    margin-right: 0;
+    margin-left: calc(50vw - 375px);
+  }
+}
+@media (min-width: 992px) {
+  .slider-container .container-right {
+    margin-right: 0;
+    margin-left: calc(50vw - 485px);
+  }
+}
+@media (min-width: 1200px) {
+  .slider-container .container-right {
+    margin-right: 0;
+    margin-left: calc(50vw - 590px);
+  }
+}
 .slider-container__overlay {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(53, 6, 6, 0.8);
   margin: 1rem;
   border-radius: 10px;
 }
@@ -610,11 +617,20 @@ img {
   background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.26);
   padding: 3rem;
-  min-height: 500px;
+  padding-top: 6rem;
+  min-height: 420px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   border-radius: 10px;
+  position: relative;
+}
+.slider-container__details img {
+  opacity: 0.04;
+  width: 200px;
+  position: absolute;
+  top: 50px;
+  left: 20px;
 }
 .slider-container__subtitle {
   font-family: "Work Sans", sans-serif;
@@ -638,7 +654,7 @@ img {
   font-size: 300px;
   font-weight: 900;
   overflow: hidden;
-  color: rgba(240, 240, 240, 0.662745098);
+  color: rgba(240, 240, 240, 0.5058823529);
   white-space: nowrap !important;
   z-index: -222222 !important;
   top: 220px;
@@ -660,8 +676,7 @@ img {
 
 .CTA-banner {
   background-color: #323861;
-  padding-top: 8rem;
-  padding-bottom: 6rem;
+  padding: 3rem 0;
   text-align: center;
 }
 .CTA-banner h2 {
@@ -675,14 +690,16 @@ img {
 .CTA-thin-banner {
   background-color: #323861;
   color: white;
-  padding: 5em 0;
-}
-.CTA-thin-banner h5 {
-  color: white;
+  padding: 2em 0;
 }
 .CTA-thin-banner button {
   background-color: white;
   color: #323861;
+}
+.CTA-thin-banner h2 {
+  color: white;
+  font-size: 45px;
+  letter-spacing: -2px;
 }
 .CTA-thin-banner p {
   color: white;
@@ -698,57 +715,17 @@ img {
   z-index: 39;
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-}
-
-.menu {
-  transform: translateX(100%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 400px;
-  transition: 1s ease-in-out;
-  background-color: rgb(255, 255, 255);
-  padding: 2rem;
-}
-.menu .fa-xmark {
-  position: absolute;
-  z-index: 9999;
-  top: 10px;
-  right: 20px;
-}
-.menu input {
-  border: none;
-  width: 100%;
-  height: 4em;
-  padding-top: 1.5em;
-  border-bottom: 1px solid rgb(62, 62, 62);
-}
-.menu input::-moz-placeholder {
-  font-size: 1rem;
-  color: rgba(151, 151, 151, 0.761);
-}
-.menu input:-ms-input-placeholder {
-  font-size: 1rem;
-  color: rgba(151, 151, 151, 0.761);
-}
-.menu input::placeholder {
-  font-size: 1rem;
-  color: rgba(151, 151, 151, 0.761);
-}
-.menu .small {
-  font-size: 0.8rem;
-  line-height: 1rem;
-  padding-top: 0.7rem;
-}
-
 .jq-open-menu {
   overflow-x: hidden;
   transform: translateX(0);
   height: 100%;
   /* z-index: 39; */
+}
+
+.slider-container__arrows {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .prev,
@@ -777,18 +754,59 @@ img {
 }
 
 .slider .slick-active + .slick-active + .slick-slide .slider-container__details {
-  background-color: rgba(255, 255, 255, 0.438);
-  opacity: 0.4;
+  opacity: 0.6 !important;
+  background-color: white !important;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
 }
 
 .auto-slider-container {
   padding-bottom: 7em;
-  background-color: rgba(244, 244, 244, 0.552);
 }
 
 .item img {
   max-width: 300px;
+}
+
+footer {
+  padding-top: 6rem;
+  background-color: #323861;
+  color: rgb(185, 185, 185);
+  font-family: "Raleway", sans-serif;
+  padding-bottom: 1rem;
+}
+footer img {
+  width: 230px;
+  padding-bottom: 0.5em;
+}
+footer p {
+  color: rgb(185, 185, 185);
+}
+footer .link {
+  margin-bottom: 0.65em;
+  margin-top: 0.3em;
+}
+footer .info {
+  color: rgba(255, 255, 255, 0.885);
+  line-height: 1.35;
+}
+footer a {
+  color: rgb(185, 185, 185);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+footer .p {
+  margin-bottom: 2rem;
+}
+footer .p2 {
+  margin-bottom: 4rem;
+}
+@media (max-width: 500px) {
+  footer {
+    padding-top: 6rem;
+    padding-bottom: 2.5rem;
+  }
 }
 
 @media (min-width: 1000px) {
