--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,10 +5,148 @@ $hilight-dark: rgb(212, 148, 9);
 $light-blue: #ecedf397;
 $grey: #6a7385;
 $white: white;
-$light-grey: rgb(183, 183, 183);
 $light-black: rgb(62, 62, 62);
 $dark-white: rgba(244, 244, 244, 0.552);
-// #d9dadf;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Work Sans", sans-serif;
+}
+
+@font-face {
+  font-family: "Didot Medium";
+  src: url(fonts/Didot\ Medium.ttf);
+}
+
+.second-section img {
+  border-radius: 20px;
+  width: 100%;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 300;
+  color: $grey;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.7em;
+}
+
+.small {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.885);
+  font-weight: 500;
+}
+
+.larger {
+  font-size: 20px;
+  line-height: 1.35em;
+  font-weight: 400;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.1em;
+  font-family: "Didot Medium", serif;
+  text-transform: uppercase;
+}
+
+h2 {
+  padding-bottom: 0.27em;
+  font-size: 62px;
+  font-weight: 400;
+  color: $dark-blue;
+  letter-spacing: -5px;
+  line-height: 1em;
+}
+
+h3 {
+  font-size: 27px;
+  font-weight: 900;
+  line-height: 2em;
+  color: $light-black;
+  font-family: "Didot Medium";
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 2em;
+  color: $white;
+}
+
+h5 {
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: -1.5px;
+  color: $dark-blue;
+  padding-bottom: 0.27em;
+  line-height: 1em;
+}
+
+@media (min-width: 900px) {
+  .container {
+    padding: 2rem;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  .small {
+    font-size: 17.5px;
+    line-height: 1.35em;
+  }
+
+  .larger {
+    font-size: 27px;
+    line-height: 1.35em;
+    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+  }
+
+  h1 {
+    font-size: 120px;
+  }
+
+  h2 {
+    font-size: 62px;
+  }
+
+  h3 {
+    font-size: 27px;
+  }
+}
+
+button {
+  display: inline-block;
+  background-color: $hilight-color;
+  border: none;
+  border-radius: 0.3rem;
+  color: #222647;
+  font-size: 16px;
+  padding: 1rem 2rem;
+  margin: 1.5rem 0;
+  transition: 1s;
+  font-weight: 600;
+  cursor: pointer;
+
+  i {
+    padding-left: 1em;
+  }
+
+  &:hover {
+    background-color: $hilight-dark;
+  }
+}
+
+.secondary-bttn {
+  background-color: rgb(251, 233, 193);
+}
+
 .text-js {
   opacity: 0;
 }
@@ -77,7 +215,6 @@ body > #header {
   }
 }
 
-@import "globals.scss";
 @import "animations.scss";
 @import "pages.scss";
 
@@ -207,23 +344,9 @@ body {
   }
 }
 
-img {
-  width: 100%;
-}
-
 .home-header {
   p {
     color: $white;
-  }
-
-  button {
-    background-color: rgb(255, 177, 8);
-    color: #222647;
-
-    &:hover {
-      background-color: $light-grey;
-      transition: 0.8s;
-    }
   }
 }
 
@@ -329,9 +452,29 @@ img {
 .slider-container {
   background-color: $light-blue;
   padding: 7em 0;
+  @media (min-width: 768px) {
+    .container-right {
+      margin-right: 0;
+      margin-left: calc(50vw - 375px);
+    }
+  }
+
+  @media (min-width: 992px) {
+    .container-right {
+      margin-right: 0;
+      margin-left: calc(50vw - 485px);
+    }
+  }
+
+  @media (min-width: 1200px) {
+    .container-right {
+      margin-right: 0;
+      margin-left: calc(50vw - 590px);
+    }
+  }
 
   &__overlay {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(53, 6, 6, 0.8);
     margin: 1rem;
     border-radius: 10px;
   }
@@ -340,11 +483,25 @@ img {
     background-color: rgb(255, 255, 255);
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.26);
     padding: 3rem;
-    min-height: 500px;
+    padding-top: 6rem;
+    min-height: 420px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     border-radius: 10px;
+    position: relative;
+
+    img {
+      opacity: 0.04;
+      width: 200px;
+      position: absolute;
+      top: 50px;
+      left: 20px;
+    }
+
+    // p {
+    //   font-weight: 400;
+    // }
   }
 
   &__subtitle {
@@ -375,7 +532,7 @@ img {
     font-size: 300px;
     font-weight: 900;
     overflow: hidden;
-    color: #f0f0f0a9;
+    color: #f0f0f081;
     white-space: nowrap !important;
     z-index: -222222 !important;
     top: 220px;
@@ -398,8 +555,7 @@ img {
 
 .CTA-banner {
   background-color: $dark-blue;
-  padding-top: 8rem;
-  padding-bottom: 6rem;
+  padding: 3rem 0;
   text-align: center;
 
   h2 {
@@ -417,15 +573,17 @@ img {
 .CTA-thin-banner {
   background-color: $dark-blue;
   color: $white;
-  padding: 5em 0;
-
-  h5 {
-    color: $white;
-  }
+  padding: 2em 0;
 
   button {
     background-color: $white;
     color: $dark-blue;
+  }
+
+  h2 {
+    color: white;
+    font-size: 45px;
+    letter-spacing: -2px;
   }
 
   p {
@@ -443,47 +601,6 @@ img {
   z-index: 39;
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-}
-.menu {
-  transform: translateX(100%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 400px;
-  transition: 1s ease-in-out;
-  background-color: rgb(255, 255, 255);
-  padding: 2rem;
-
-  .fa-xmark {
-    position: absolute;
-    z-index: 9999;
-    top: 10px;
-    right: 20px;
-  }
-
-  input {
-    border: none;
-    width: 100%;
-    height: 4em;
-    padding-top: 1.5em;
-    border-bottom: 1px solid $light-black;
-
-    &::placeholder {
-      font-size: 1rem;
-      color: rgba(151, 151, 151, 0.761);
-    }
-  }
-
-  .small {
-    font-size: 0.8rem;
-    line-height: 1rem;
-    padding-top: 0.7rem;
-  }
-}
-
 .jq-open-menu {
   overflow-x: hidden;
   transform: translateX(0);
@@ -492,6 +609,11 @@ img {
   /* z-index: 39; */
 }
 
+.slider-container__arrows {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
 .prev,
 .next {
   border-radius: 50%;
@@ -522,19 +644,64 @@ img {
   + .slick-active
   + .slick-slide
   .slider-container__details {
-  background-color: rgba(255, 255, 255, 0.438);
-  opacity: 0.4;
+  opacity: 0.6 !important;
+  background-color: white !important;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.05);
 }
 
 .auto-slider-container {
   padding-bottom: 7em;
-  background-color: $dark-white;
 }
 
 .item {
   img {
     max-width: 300px;
+  }
+}
+
+footer {
+  padding-top: 6rem;
+  background-color: $dark-blue;
+  color: rgb(185, 185, 185);
+  font-family: "Raleway", sans-serif;
+  padding-bottom: 1rem;
+
+  img {
+    width: 230px;
+    padding-bottom: 0.5em;
+  }
+  p {
+    color: rgb(185, 185, 185);
+  }
+  .link {
+    margin-bottom: 0.65em;
+    margin-top: 0.3em;
+  }
+
+  .info {
+    color: rgba(255, 255, 255, 0.885);
+    line-height: 1.35;
+  }
+
+  a {
+    color: rgb(185, 185, 185);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+  }
+
+  .p {
+    margin-bottom: 2rem;
+  }
+
+  .p2 {
+    margin-bottom: 4rem;
+  }
+
+  @media (max-width: 500px) {
+    padding-top: 6rem;
+    padding-bottom: 2.5rem;
   }
 }
 
