--- a/styles/index.scss
+++ b/styles/index.scss
@@ -52,11 +52,12 @@ p {
 }
 
 h1 {
-  font-weight: 500;
+  font-weight: 200 !important;
   font-size: 40px;
   line-height: 1.1em;
   font-family: "Didot Medium", serif;
   text-transform: uppercase;
+  color: white;
 }
 
 h2 {
@@ -175,6 +176,29 @@ button {
   }
 }
 
+.slider2 {
+  img {
+    margin-top: 80px;
+    height: 70vh !important;
+  }
+}
+.slider-overlay {
+  margin-top: 80px;
+
+  width: 100%;
+  height: 70vh;
+  position: absolute;
+  top: 0;
+  background: rgb(50, 56, 97);
+  background: linear-gradient(
+    90deg,
+    rgba(50, 56, 97, 1) 32%,
+    rgba(50, 56, 97, 0.7973564425770308) 58%,
+    rgba(0, 212, 255, 0) 74%
+  );
+  z-index: 99999999;
+}
+
 .credit {
   position: fixed;
   bottom: 20px;
@@ -196,10 +220,19 @@ body > #header {
   overflow: hidden;
   width: 100%;
   padding: 1rem 2rem;
+  background-image: url("lapis-logo.png");
+
+  a {
+    color: $dark-blue;
+
+    &:hover {
+      color: $hilight-color;
+    }
+  }
 }
 
 .header-image {
-  background-image: url("lapis-logo-light.png");
+  background-image: url("lapis-logo.png");
   width: 170px;
   height: 50px;
   background-size: cover;
@@ -267,10 +300,11 @@ body > #header {
   overflow: hidden;
   width: 100%;
   padding: 1rem 2rem;
+  background: white;
 }
 
 .header-image {
-  background-image: url("../lapis-logo-light.png");
+  background-image: url("../lapis-logo.png");
   width: 170px;
   height: 50px;
   background-size: cover;
