--- a/styles/index.css
+++ b/styles/index.css
@@ -59,8 +59,8 @@ h3 {
   font-size: 27px;
   font-weight: 900;
   line-height: 2em;
+  letter-spacing: -2px;
   color: rgb(62, 62, 62);
-  font-family: "Didot Medium";
 }
 
 h4 {
@@ -666,7 +666,7 @@ body {
   font-size: 300px;
   font-weight: 900;
   overflow: hidden;
-  color: rgba(240, 240, 240, 0.5058823529);
+  color: #f0f0f0;
   white-space: nowrap !important;
   z-index: -222222 !important;
   top: 220px;
