--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,14 @@
+/* ==== Slider Style === */
+.Modern-Slider .item .img-fill .info {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.179);
+  line-height: 100vh;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -61,7 +72,7 @@ h3 {
   font-weight: 900;
   line-height: 2em;
   color: rgb(62, 62, 62);
-  font-family: "Didot Medium";
+  letter-spacing: -2px;
 }
 
 h4 {
@@ -168,20 +179,51 @@ button:hover {
   font-weight: 300;
 }
 
+.slider2 .div {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+}
 .slider2 img {
-  margin-top: 80px;
-  height: 70vh !important;
+  min-height: 100%;
+  min-width: 100%;
+  position: relative;
+  display: inline-block;
+  max-width: none;
 }
 
 .slider-overlay {
-  margin-top: 80px;
   width: 100%;
-  height: 70vh;
+  margin-top: 80px;
+  min-height: 400px;
+  height: 100vh;
+  max-height: 580px;
   position: absolute;
   top: 0;
-  background: rgb(50, 56, 97);
-  background: linear-gradient(90deg, rgb(50, 56, 97) 32%, rgba(50, 56, 97, 0.7973564426) 58%, rgba(0, 212, 255, 0) 74%);
-  z-index: 99999999;
+  background: linear-gradient(90deg, rgba(50, 56, 97, 0.85) 40%, rgba(50, 56, 97, 0.6973564426) 58%, rgba(0, 212, 255, 0) 74%);
+  z-index: 2;
+}
+.slider-overlay__content {
+  padding-top: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.slider-overlay h2 {
+  font-size: 83px;
+  font-weight: 800;
+  letter-spacing: -6px;
+}
+.slider-overlay p {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 2em;
+  color: white;
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.3em;
 }
 
 .credit {
@@ -691,7 +733,7 @@ body {
   font-size: 300px;
   font-weight: 900;
   overflow: hidden;
-  color: rgba(240, 240, 240, 0.5058823529);
+  color: #f0f0f0;
   white-space: nowrap !important;
   z-index: -222222 !important;
   top: 220px;
