--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,67 @@
+// .Modern-Slider .img-fill {
+//   width: 100%;
+//   display: block;
+//   overflow: hidden;
+//   position: relative;
+//   text-align: center;
+//   margin-top: 80px;
+// }
+
+// .Modern-Slider .img-fill img {
+//   min-height: 400px;
+//   height: 100vh;
+//   max-height: 580px;
+//   min-width: 100%;
+//   position: relative;
+//   display: inline-block;
+//   max-width: none;
+//   object-fit: cover;
+//   object-position: right top;
+// }
+
+// *,
+// *:before,
+// *:after {
+//   -webkit-box-sizing: border-box;
+//   box-sizing: border-box;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+//   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.04);
+// }
+
+// .Grid1k {
+//   padding: 0 15px;
+//   max-width: 1200px;
+//   margin: auto;
+// }
+
+// .Modern-Slider .blocks-box,
+// .slick-slider {
+//   margin: 0;
+//   padding: 0 !important;
+// }
+
+// .Modern-Slider .slick-slide {
+//   float: left /* If RTL Make This Right */;
+//   padding: 0;
+// }
+
+/* ==== Slider Style === */
+// .Modern-Slider .item .img-fill {
+//   height: 100vh;
+//   background: #000;
+// }
+
+.Modern-Slider .item .img-fill .info {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.179);
+  line-height: 100vh;
+}
+
 $dark-blue: #323861;
 $mid-blue: #878db4;
 
@@ -74,7 +138,7 @@ h3 {
   font-weight: 900;
   line-height: 2em;
   color: $light-black;
-  font-family: "Didot Medium";
+  letter-spacing: -2px;
 }
 
 h4 {
@@ -177,26 +241,59 @@ button {
 }
 
 .slider2 {
+  .div {
+    width: 100%;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+  }
   img {
-    margin-top: 80px;
-    height: 70vh !important;
+    min-height: 100%;
+    min-width: 100%;
+    position: relative;
+    display: inline-block;
+    max-width: none;
   }
 }
 .slider-overlay {
-  margin-top: 80px;
-
   width: 100%;
-  height: 70vh;
+  margin-top: 80px;
+  min-height: 400px;
+  height: 100vh;
+  max-height: 580px;
   position: absolute;
   top: 0;
-  background: rgb(50, 56, 97);
   background: linear-gradient(
     90deg,
-    rgba(50, 56, 97, 1) 32%,
-    rgba(50, 56, 97, 0.7973564425770308) 58%,
+    rgba(50, 56, 97, 0.85) 40%,
+    rgba(50, 56, 97, 0.6973564425770308) 58%,
     rgba(0, 212, 255, 0) 74%
   );
-  z-index: 99999999;
+
+  &__content {
+    padding-top: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  h2 {
+    font-size: 83px;
+    font-weight: 800;
+    letter-spacing: -6px;
+  }
+
+  p {
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 2em;
+    color: white;
+    font-family: "Work Sans", sans-serif;
+    line-height: 1.3em;
+  }
+  z-index: 2;
 }
 
 .credit {
@@ -584,7 +681,7 @@ body {
     font-size: 300px;
     font-weight: 900;
     overflow: hidden;
-    color: #f0f0f081;
+    color: #f0f0f0;
     white-space: nowrap !important;
     z-index: -222222 !important;
     top: 220px;
