--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,94 @@
+.img-fill {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  margin-top: 80px;
+}
+
+.img-fill img {
+  min-width: 100%;
+  position: relative;
+  display: inline-block;
+  max-width: none;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.04);
+}
+
+.Grid1k {
+  padding: 0 15px;
+  max-width: 1200px;
+  margin: auto;
+}
+
+.blocks-box,
+.slick-slider {
+  margin: 0;
+  padding: 0 !important;
+}
+
+.slick-slide {
+  float: left;
+  padding: 0;
+}
+
+/* ==== Slider Style === */
+.Modern-Slider .item .img-fill .info {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background: rgba(0, 0, 0, 0.5);
+  line-height: 100vh;
+  text-align: center;
+}
+
+.Modern-Slider .item .info > div {
+  display: inline-block !important;
+  vertical-align: middle;
+}
+
+.slider-overlay {
+  width: 100%;
+  margin-top: 80px;
+  min-height: 400px;
+  height: 100vh;
+  max-height: 580px;
+  position: absolute;
+  top: 0;
+  background: linear-gradient(90deg, rgba(50, 56, 97, 0.85) 40%, rgba(50, 56, 97, 0.6973564426) 58%, rgba(0, 212, 255, 0) 74%);
+  z-index: 2;
+}
+.slider-overlay__content {
+  padding-top: 25%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.slider-overlay h2 {
+  font-size: 83px;
+  font-weight: 800;
+  letter-spacing: -6px;
+}
+.slider-overlay p {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 2em;
+  color: white;
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.3em;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -825,7 +916,7 @@ footer .p2 {
 }
 
 @media (min-width: 1000px) {
-  .slick-list {
+  .slick .slick-list {
     padding: 0 20% 0 0 !important;
   }
 }/*# sourceMappingURL=index.css.map */
